// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inbox Placement Reducer list seeds fail 1`] = `
Object {
  "pending": false,
  "seeds": Array [],
  "seedsError": undefined,
}
`;

exports[`Inbox Placement Reducer list seeds pending 1`] = `
Object {
  "pending": true,
  "seeds": Array [],
  "seedsError": null,
}
`;

exports[`Inbox Placement Reducer list seeds success 1`] = `
Object {
  "pending": false,
  "seeds": undefined,
  "seedsError": null,
}
`;
